Fixed Theme btn visible when navbar is open issue

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html {
   height: 100vh;
   width: 100%;
   position: fixed;
-  z-index: 100;
+  z-index: 1000;
 }
 
 /* 3.Section - Navbar */
